<resources>
    <string name="app_name">Jaldi Shopping</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="action_locate">Locate </string>
    <string name="action_scan">Scan</string>
    <string name="action_notification">Notifications</string>
    <string name="action_offers">Offers</string>
    <string name="action_mylist">MyList</string>
    <string name="heading">Stores we serve!</string>
    <string name="account">Create account</string>
    <string name="login">Already a Member? Log in.</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Your Email ID</string>
    <string name="password">Create password</string>
    <string name="login_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="zip">Zip Code</string>
    <string name="signup">Sign Up</string>
    <string name="or">OR</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Google</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="wishlist_empty">No items in the Wishlist.</string>
    <string name="shoppinglist_empty">No items in the Shopping List.</string>
    <string name="history_empty">There are no previous orders.</string>
    <string name="notificaion_empty">You dont have any notifications</string>
    <string name="title_activity_offers">OffersActivity</string>
     <string name="submit">Submit</string>
    <string name="backdrop_title">Todays Offer</string>
    <string name="backdrop_subtitle">This season top deals</string>
    <string name="title_activity_offers_adapter">OffersAdapter</string>
    <string name="title_activity_bar_code_scan">Scan the Barcode</string>
    <string name="title_activity_deatils">DeatilsActivity</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_billing_summary">Billing Summary</string>
    <string name="title_activity_payment_status">Payment Status</string>
    <string name="title_activity_payment_option">Payment Option</string>
    <string name="title_activity_order_verify">Order Verify</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="title_activity_wishlist">Wish List</string>
    <string name="title_activity_shoplist">Shopping List</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_itemdetails">Item Details</string>


</resources>
