<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item android:id="@+id/action_scan"
        android:icon="@drawable/barcode_scan"
        android:title="@string/action_scan"
        />
    <item android:id="@+id/action_locate"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/action_locate"
        />
    <item android:id="@+id/action_offers"
        android:icon="@drawable/ic_local_offer_black_24dp"
        android:title="@string/action_offers"
         />
    <item android:id="@+id/action_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/action_notification"
        />
    <item android:id="@+id/action_mylist"
        android:icon="@drawable/format_list_checks"
        android:title="@string/action_mylist"
        />
</menu>