<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:background="@android:color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:textColorHint="@color/body"
            android:textColor="@color/body"
            android:ems="10"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_border_layout"
            android:id="@+id/name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            android:textColorHint="@color/body"
            android:textColor="@color/body"
            android:ems="10"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_border_layout"
            android:id="@+id/last_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/body"
            android:textColor="@color/body"
            android:ems="10"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_border_layout"
            android:id="@+id/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/body"
            android:textColor="@color/body"
            android:ems="10"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_border_layout"
            android:id="@+id/password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/mobile_number"
            android:textColorHint="@color/body"
            android:textColor="@color/body"
            android:ems="10"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_border_layout"
            android:id="@+id/mobile_number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/zip"
            android:textColorHint="@color/body"
            android:textColor="@color/body"
            android:ems="10"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_border_layout"
            android:id="@+id/zip_code" />

        <Button
            android:text="@string/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/body"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:id="@+id/signup" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/or"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/body"
            android:ems="10"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp"

            android:id="@+id/or" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">
            <Button
                android:text="@string/facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/body"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/facebook" />
            <Button
                android:text="@string/gmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/body"

                android:textColor="@android:color/white"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:id="@+id/gmail" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>