<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:background="@android:color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/body"
            android:textColor="@color/body"
            android:ems="10"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_border_layout"

            android:id="@+id/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/body"
            android:textColor="@color/body"
            android:ems="10"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_border_layout"
            android:id="@+id/password" />

        <Button
            android:text="@string/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/body"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:textStyle="bold"

            android:layout_marginRight="10dp"
            android:id="@+id/signup" />


            <Button
                android:text="@string/start_shopping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/body"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/start_shopping" />
        <TextView
            android:text="@string/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/body"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/forgot_password" />

    </LinearLayout>
</ScrollView>